<resources>
    <string name="app_name">Les Pas</string>
    <string name="need_to_restart">Storage transfer has finished. You need to restart Les Pas now.</string>
    <string name="sd_card_not_ready">SD card is either not mounted or is read-only.</string>
    <string name="msg_login_first">Please login to your server first.</string>
    <string name="error_only_one_account">Only one account allowed</string>
    <string name="welcome_message_title">Welcome to Les Pas!</string>
    <string name="welcome_message">To get started, please grant access on your Nextcloud server.</string>
    <string name="button_text_scan">Scan App Password</string>
    <string name="host_textinput_label">Server address</string>
    <string name="url_helper_text">e.g. https://example.com/nextcloud</string>
    <string name="http_toggle_helper_text">\u2B11Touch prefix to toggle unsecure HTTP</string>
    <string name="nextcloud_credential_scheme" translatable="false">nc</string>
    <string name="account_type_nc" translatable="false">site.leos.apps.lespas.nc</string>
    <string name="nc_userdata_server" translatable="false">NC_SERVER</string>
    <string name="nc_userdata_server_protocol" translatable="false">NC_SERVER_PROTOCOL</string>
    <string name="nc_userdata_server_host" translatable="false">NC_SERVER_HOST</string>
    <string name="nc_userdata_server_port" translatable="false">NC_SERVER_PORT</string>
    <string name="nc_userdata_username" translatable="false">NC_USERNAME</string>
    <string name="nc_userdata_loginname" translatable="false">NC_LOGINNAME</string>
    <string name="nc_userdata_secret" translatable="false">NC_SECRET</string>
    <string name="nc_userdata_selfsigned" translatable="false">NC_SELFSIGNED</string>
    <string name="nc_userdata_certificate" translatable="false">NC_SELFSIGNED_CERTIFICATE</string>
    <string name="verify_ssl_certificate_title">Bad SSL Certificate</string>
    <string name="verify_ssl_certificate_message">Server %1$s\'s certificate CAN NOT be verified, do you want to trust this server?</string>
    <string name="untrusted_ssl_certificate_message">Subject:\n%1$s\n\nIssuer:\n%2$s\n\nSHA-256 Fingerprint:\n%3$s\n\nIssued on: %4$s\n\nExpired on: %5$s\n\n\nDo you want to trust this server?</string>
    <string name="accept_certificate">Trust it!</string>
    <string name="msg_install_qrcode_scanner">Please install a compatible QR code scanner app first. Like %1$sSecScanQR from F-Droid</string>
    <string name="host_address_validation_error">Address not valid.</string>
    <string name="host_not_valid">Address not valid (%1$d).</string>
    <string name="unknown_host">Nextcloud server not found.</string>
    <string name="network_error">Network error, try again.</string>
    <string name="certificate_error">Site certificate error.</string>
    <string name="pick_home">Set your home folder</string>
    <string name="pick_home_note">"Les Pas saves your albums and backups in this folder on your server"</string>
    <string name="button_text_set_as_home">Set</string>
    <string name="tooltips_text_create_folder">Create new folder</string>
    <string name="login_to_new_account">You are logging in with a new account. You should logout the current account first, then re-launch Les Pas. Proceed to logout?</string>
    <string name="should_allow_launching_other_app">Please allow Les Pas launching other apps in your security settings.</string>
    <string name="menu_item_qr_scanner_title">Scan QR code</string>
    <string name="local_base" translatable="false">/lespas</string>
    <string name="dav_files_endpoint" translatable="false">/remote.php/dav/files/</string>
    <string name="fab_add_photos">Add photos</string>
    <string name="unlock_please">Unlock hidden albums</string>
    <string name="msg_set_as_remote">"Setting album as 'Remote' will remove all it's media files from this device. Proceed?"</string>
    <string name="msg_set_as_local">"Setting album as 'Local' will download all it's media files from server, hence it would take a while. Proceed?"</string>
    <string name="msg_low_storage_space">"Your internal storage space is less than 10% free, this will stop Les Pas from syncing with server."</string>
    <string name="option_menu_name_filter">Filter by name</string>
    <string name="hidden_albums">Hidden Albums:</string>
    <string name="not_hiding">The following names already existed in hidden album list: %1$s</string>
    <string name="msg_preserve_meta">Preserve existing</string>
    <string name="button_text_rescan">Rescan</string>
    <string name="button_text_caption">Caption</string>
    <string name="button_text_location">Location</string>
    <string name="button_text_taken_date">Date</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="rename_album">Change album name to</string>
    <string name="rename_media">New name</string>
    <string name="total_photo">Photos: %1$d</string>
    <string name="duration_days">Days: %1$d</string>
    <string name="duration_weeks">Weeks: %1$d</string>
    <string name="duration_months">Months: %1$d</string>
    <string name="duration_years">Years: %1$d</string>
    <string name="published_to">Published to: %1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preparing_shares">Preparing shares…</string>
    <string name="msg_error_preparing_share_out_files">Fail to prepare media files.</string>
    <string name="msg_check_network">Check your server connection.</string>
    <string name="msg_server_operation">Photos will appear in target album after synchronizing with server.</string>
    <string name="msg_saved_location">Photos will be saved in \'Download\' folder.</string>
    <string name="option_menu_search">Search for name</string>
    <string name="option_menu_slideshow">Slideshow</string>
    <string name="button_text_set_cover">Set as cover</string>
    <string name="button_text_share">Share</string>
    <string name="button_text_use_as">Use as</string>
    <string name="button_text_info">Info</string>
    <string name="button_text_edit_replace">Retouch - Replace</string>
    <string name="button_text_edit_add">Retouch - Add</string>
    <string name="button_text_save">Save</string>
    <string name="hint_caption">Add caption</string>
    <string name="toast_cover_applied">New cover applied.</string>
    <string name="toast_cover_set_canceled">Canceled setting new cover.</string>
    <string name="settings_title">Settings</string>
    <string name="view_header">View</string>
    <string name="auto_theme_perf_key" translatable="false">AUTO_THEME</string>
    <string name="auto_theme_title">App theme</string>
    <string name="theme_light_entries">Light theme</string>
    <string name="theme_dark_entries">Dark theme</string>
    <string name="theme_auto_entries">Follow system setting</string>
    <string name="theme_light_values" translatable="false">1</string>
    <string name="theme_dark_values" translatable="false">2</string>
    <string name="theme_auto_values" translatable="false">-1</string>
    <string name="true_black_pref_key" translatable="false">TRUE_BLACK_THEME</string>
    <string name="true_black_title">True black dark theme</string>
    <string name="material_theme_title">Enable Material Theme</string>
    <string name="material_theme_pref_key" translatable="false">MATERIAL_THEME</string>
    <string name="auto_rotate_perf_key" translatable="false">AUTO_ROTATE</string>
    <string name="auto_rotate_title">Rotate screen to match photo aspect ratio</string>
    <string name="default_sort_order_pref_key" translatable="false">PHOTO_SORT_ORDER</string>
    <string name="default_sort_order_title">Default photo sort order for new album</string>
    <string name="gallery_as_album_perf_key" translatable="false">CAMERAROLL_AS_ALBUM</string>
    <string name="gallery_as_album_title">Gallery shown as an album</string>
    <string name="show_archive_perf_key" translatable="false">SHOW_ARCHIVE</string>
    <string name="show_archive_title">Show server archive in Gallery</string>
    <string name="sync_deletion_perf_key" translatable="false">SYNC_GALLERY_DELETION</string>
    <string name="sync_deletion_title">Sync gallery deletion to server archive</string>
    <string name="sync_deletion_rational">To gain more flexibility of making sync decision on every deletion, you should grant Les Pas the Manage Media permission.</string>
    <string name="video_play_header">Video Playing</string>
    <string name="auto_replay_perf_key" translatable="false">AUTO_REPLAY</string>
    <string name="default_mute_perf_key" translatable="false">DEFAULT_MUTE</string>
    <string name="auto_replay_title">Replay video automatically</string>
    <string name="default_mute_title">Mute video by default</string>
    <string name="edit_header">Retouch</string>
    <string name="edit_replace_pref_key" translatable="false">SNAPSEED_REPLACE</string>
    <string name="edit_replace_title">Replace original</string>
    <string name="edit_replace_on_summary">Yes, replace the original photo with the editing result.</string>
    <string name="edit_replace_off_summary">No, add the edited file to the album alongside the original. Manage duplicates yourself.</string>
    <string name="remove_editor_output_pref_key" translatable="false">REMOVE_EDITOR_OUTPUT</string>
    <string name="remove_editor_output_title">Remove work files</string>
    <string name="sync_header">Synchronization</string>
    <string name="wifionly_pref_key" translatable="false">WIFI_ONLY</string>
    <string name="wifionly_title">Sync and backup only on WiFi</string>
    <string name="wifionly_summary_on">Yes, will not consume mobile data.</string>
    <string name="wifionly_summary_off">No, consumes mobile data – caution is advised when you have a large collection of photos.</string>
    <string name="logout_pref_key" translatable="false">LOGOUT</string>
    <string name="logout_title">Logout</string>
    <string name="button_text_map">Map App</string>
    <string name="item_settings">Settings</string>
    <string name="item_search">Search</string>
    <string name="item_unhide">Unhide</string>
    <string name="item_rename">Rename Album</string>
    <string name="item_publish">Publish Album</string>
    <string name="item_bgm">Manage BGM</string>
    <string name="item_sortby">Sort by</string>
    <string name="item_dateasc">Date Ascending</string>
    <string name="item_datedesc">Date Descending</string>
    <string name="item_nameasc">Name Ascending</string>
    <string name="item_namedesc">Name Descending</string>
    <string name="action_share">Share</string>
    <string name="action_rescan">Re-scan EXIF</string>
    <string name="action_remove">Remove</string>
    <string name="action_hide">Hide</string>
    <string name="action_set_remote">Set as Remote</string>
    <string name="action_reuse">To album…</string>
    <string name="action_select_all">Select all</string>
    <string name="action_download_to_device">Download to Device</string>
    <string name="action_upload_to_archive">Upload to Archive</string>
    <string name="publication_list_fragment_title">"Friend's publications"</string>
    <string name="item_show_meta">Show meta</string>
    <string name="button_text_add_to_lespas">Add to album</string>
    <string name="option_menu_in_map">Show on Map</string>
    <string name="title_sensitive_data">Sensitive Meta Data</string>
    <string name="button_text_keep_meta_data">Keep</string>
    <string name="title_picture_resolution">Picture Resolution</string>
    <string name="button_text_use_original_size">Use Original</string>
    <string name="button_text_use_thumbnail">Shrink</string>
    <string name="checkbox_text_remove_afterwards">Remove after shared</string>
</resources>