<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/view_header">
        <ListPreference
            app:key="@string/auto_theme_perf_key"
            app:title="@string/auto_theme_title"
            app:entries="@array/auto_theme_entries"
            app:entryValues="@array/auto_theme_values"
            app:defaultValue="@string/theme_auto_values"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="@string/auto_rotate_perf_key"
            app:title="@string/auto_rotate_title"
            app:singleLineTitle="false"
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="@string/sync_pref_key"
            app:title="@string/background_sync_title"
            app:summaryOn="@string/background_sync_summary"
            app:singleLineTitle="false"
            app:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="@string/wifionly_pref_key"
            app:summaryOff="@string/wifionly_summary_off"
            app:summaryOn="@string/wifionly_summary_on"
            app:title="@string/wifionly_title"
            app:singleLineTitle="false"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">
        <Preference
            app:key="@string/logout_pref_key"
            app:title="@string/logout_title"
            app:singleLineTitle="false" />
    </PreferenceCategory>


</PreferenceScreen>