<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/option_menu_in_map"
        android:title="@string/option_menu_in_map"
        android:orderInCategory="7"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_map_24"
        android:visible="false"
        android:enabled="false" />
    <item
        android:id="@+id/option_menu_add_photo"
        android:title="@string/fab_add_photos"
        android:orderInCategory="8"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_add_photo_24" />
    <item
        android:id="@+id/option_menu_sortby"
        android:title="@string/item_sortby"
        android:orderInCategory="13"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/option_menu_sortbydateasc"
                android:checkable="true"
                android:title="@string/item_dateasc"/>
            <item
                android:id="@+id/option_menu_sortbydatedesc"
                android:checkable="true"
                android:title="@string/item_datedesc"/>
            <item
                android:id="@+id/option_menu_sortbynameasc"
                android:checkable="true"
                android:title="@string/item_nameasc"/>
            <item
                android:id="@+id/option_menu_sortbynamedesc"
                android:checkable="true"
                android:title="@string/item_namedesc"/>
        </menu>
    </item>
    <item
        android:id="@+id/option_menu_rename"
        android:title="@string/item_rename"
        android:orderInCategory="11"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_menu_publish"
        android:title="@string/item_publish"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_menu_bgm"
        android:title="@string/item_bgm"
        android:orderInCategory="12"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_menu_settings"
        android:title="@string/item_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>