<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2019 Jeffrey Liu (scubajeffrey@protonmail.ch)
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_menu_received_shares"
        android:title="@string/publication_list_fragment_title"
        android:orderInCategory="50"
        android:icon="@drawable/ic_baseline_shared_with_me_24"
        android:enabled="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/option_menu_camera_roll"
        android:title="@string/item_camera_roll"
        android:orderInCategory="80"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_menu_search"
        android:title="@string/item_search"
        android:orderInCategory="81"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_menu_unhide"
        android:title="@string/item_unhide"
        android:orderInCategory="82"
        android:enabled="false"
        app:showAsAction="never" />
    <item android:id="@+id/option_menu_album_name_filter"
        android:title="@string/option_menu_name_filter"
        android:orderInCategory="83"
        app:showAsAction="collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:visible="true" />
    <item
        android:id="@+id/option_menu_sortby"
        android:title="@string/item_sortby"
        android:orderInCategory="90"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/option_menu_sortbydateasc"
                android:checkable="true"
                android:title="@string/item_dateasc"/>
            <item
                android:id="@+id/option_menu_sortbydatedesc"
                android:checkable="true"
                android:checked="true"
                android:title="@string/item_datedesc"/>
            <item
                android:id="@+id/option_menu_sortbynameasc"
                android:checkable="true"
                android:title="@string/item_nameasc"/>
            <item
                android:id="@+id/option_menu_sortbynamedesc"
                android:checkable="true"
                android:title="@string/item_namedesc"/>
        </menu>
    </item>
    <item
        android:id="@+id/option_menu_settings"
        android:title="@string/item_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>