<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2019 Jeffrey Liu (scubajeffrey@protonmail.ch)
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/remove"
        android:title="@string/action_remove"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/toggle_remote"
        android:title="@string/action_set_remote"
        android:icon="@drawable/ic_baseline_wb_cloudy_24"
        app:showAsAction="never" />
    <item android:id="@+id/rescan"
        android:title="@string/action_rescan"
        android:icon="@drawable/ic_baseline_reload_24"
        app:showAsAction="never" />
    <item android:id="@+id/rename"
        android:title="@string/item_rename"
        android:icon="@drawable/ic_baseline_rename_24"
        app:showAsAction="never" />
    <item android:id="@+id/hide"
        android:title="@string/action_hide"
        android:icon="@drawable/ic_baseline_hide_24"
        app:showAsAction="never" />
    <item android:id="@+id/select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        app:showAsAction="never" />

</menu>