<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2019 Jeffrey Liu (scubajeffrey@protonmail.ch)
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/remove"
        android:title="@string/action_remove"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/add"
        android:title="@string/action_reuse"
        android:icon="@drawable/ic_baseline_footprint_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/download_to_device"
        android:title="@string/action_download_to_device"
        android:icon="@drawable/ic_baseline_download_24"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/upload_to_archive"
        android:title="@string/action_upload_to_archive"
        android:icon="@drawable/ic_baseline_upload_24"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        app:showAsAction="ifRoom" />

</menu>