<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/remove"
        android:title="@string/action_remove"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/lespas_reuse"
        android:title="@string/action_reuse"
        android:icon="@drawable/ic_baseline_footprint_24"
        app:showAsAction="never" />

    <item android:id="@+id/snapseed_edit"
        android:title="@string/tooltip_text_edit_in_snapseed"
        android:icon="@drawable/ic_baseline_snapseed_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        app:showAsAction="ifRoom" />

</menu>