<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2019 Jeffrey Liu (scubajeffrey@protonmail.ch)
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/option_menu_share"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_share_24" />
    <item android:id="@+id/option_menu_lespas"
        android:title="@string/button_text_add_to_lespas"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_footprint_24"
        android:visible="false" />
    <item android:id="@+id/option_menu_open_in_map_app"
        android:title="@string/button_text_map"
        app:showAsAction="never"
        android:enabled="false" />
</menu>