<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2019 Jeffrey Liu (scubajeffrey@protonmail.ch)
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shape_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/tiny_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/extra_padding"
        android:paddingTop="@dimen/big_padding"
        android:paddingBottom="@dimen/small_padding">

        <TextView
            android:id="@+id/meta_data_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/big_padding"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:text="@string/title_sensitive_data"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/strip_options"
            style="@style/Theme.LesPas.Toggle.Group"
            app:layout_constraintTop_toBottomOf="@id/meta_data_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginHorizontal="@dimen/small_padding"
            app:singleSelection="true"
            app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/strip_on"
            style="@style/Theme.LesPas.Toggle.Button"
            app:icon="@drawable/ic_baseline_exif_strip_24"
            app:iconGravity="top"
            android:text="@string/action_remove"
            android:textSize="11sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/strip_off"
            style="@style/Theme.LesPas.Toggle.Button"
            app:icon="@drawable/ic_baseline_exif_keep_24"
            app:iconGravity="top"
            android:text="@string/button_text_keep_meta_data"
            android:textSize="11sp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/resolution_option_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_padding"
            app:layout_constraintTop_toBottomOf="@id/strip_options"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:text="@string/title_picture_resolution"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/resolution_options"
            style="@style/Theme.LesPas.Toggle.Group"
            app:layout_constraintTop_toBottomOf="@id/resolution_option_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginHorizontal="@dimen/small_padding"
            app:singleSelection="true"
            app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/original_picture"
            style="@style/Theme.LesPas.Toggle.Button"
            app:icon="@drawable/ic_baseline_image_size_actual_24"
            app:iconGravity="top"
            android:text="@string/button_text_use_original_size"
            android:textSize="11sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/thumbnail"
            style="@style/Theme.LesPas.Toggle.Button"
            app:icon="@drawable/ic_baseline_image_size_thumbnail_24"
            app:iconGravity="top"
            android:text="@string/button_text_use_thumbnail"
            android:textSize="11sp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <CheckBox
            android:id="@+id/remove_after_shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resolution_options"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/big_padding"
            android:text="@string/checkbox_text_remove_afterwards"
            android:checked="false"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/ok_button"
            app:layout_constraintRight_toLeftOf="@id/ok_button"
            style="@style/Theme.LesPas.TextButton"
            android:text="@android:string/cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/remove_after_shared"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Theme.LesPas.TextButton"
            android:text="@string/action_share"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>